# JellyfinGTK

./: .gitignore  README.md  pyproject.toml
assets/: style.css
old/: main.py.backup  main_backup.py  main_old.py
src/: config_store.py  jellyfin_client.py  main.py
ui/: album_tile.cmb  album_tile.ui  login.ui  queue_row.ui  track_row.cmb  track_row.ui  tracks_view_row.ui  window.backup.ui  window.cmb  window.ui
